<resources>
    <string name="application_name">Lamoda Copy</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_cart">Cart</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="profile_name">First Name</string>
    <string name="profile_email">Email</string>
    <string name="button_profile_settings_desc">Profile settings</string>
    <string name="button_notifications_desc">Notifications</string>
    <string name="card_label_my_discount">my discount</string>
    <string name="label_for_premium_collections">for PREMIUM collections</string>
    <string name="title_home">Home</string>
    <string name="label_btn_promos">Promos</string>
    <string name="label_btn_gifts">Gifts</string>
    <string name="label_btn_rewards">Rewards</string>
    <string name="label_orders">Orders</string>
    <string name="label_returns">Refunds</string>
    <string name="label_reviews_questions">Reviews and questions</string>
    <string name="label_for_a_review">for a review</string>
    <string name="label_bonuses"> bonuses</string>
    <string name="desc_rate_item">Rate item</string>
    <string name="label_rating_profile_action">How\'d you like </string>
    <string name="label_gift_cards">Gift cards</string>
    <string name="label_currency">$</string>
    <string name="label_product_subscriptions">Product subscriptions</string>
    <string name="label_country">Country</string>
    <string name="label_settings">Settings</string>
    <string name="label_check_for_updates"><u>Check for updates</u></string>
    <string name="label_support">Support</string>
    <string name="label_support_centre">Support center</string>
    <string name="label_delivery_and_fitting">Delivery and fitting</string>
    <string name="label_how_to_return_items">How to return items</string>
    <string name="label_ask_a_question">Ask a question</string>
    <string name="label_btn_earning_history"><u>Earning history</u>></string>
    <string name="lbl_version">Version %1$s</string>
    <string name="discount_size_placeholder" translatable="false">—%1$d%%</string>
    <string name="lbl_formatted_price" translatable="false">%1$d ₽</string>
    <string name="lbl_discount_no_minus" translatable="false">%1$d%%</string>
    <string name="lbl_add_to_cart">Add to cart\n%1$d items left</string>
    <string name="lbl_out_of_stock">Out of stock</string>
    <string name="lbl_lamoda_discount">Lamoda discount</string>
    <string name="lbl_lamoda_club_discount">Lamoda Club discount</string>
    <string name="size_lbl_rus" translatable="false">RUS</string>
    <string name="size_lbl_int" translatable="false">INT</string>
    <string name="lbl_size_table">Size table</string>
    <string name="lbl_items_colors">Available colors</string>
    <string name="lbl_mark_favourite">Mark favourite</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_about_product">About product</string>
    <string name="lbl_similar">Similar</string>
    <string name="chip_lbl_of_this_brand">of this brand</string>
    <string name="chip_lbl_visually">visually</string>
    <string name="chip_lbl_of_this_color">of this color</string>
    <string name="lbl_people_buy_this_with">People buy this with</string>
    <string name="lbl_recently_seen">Recently seen</string>
    <string name="lbl_need_help">Need help?</string>
    <string name="dotted_line" translatable="false">................................................................................................</string>
    <string name="lbl_waist">waist: %1$s</string>
    <string name="lbl_bust">bust: %1$s</string>
    <string name="lbl_feet">feet length: %1$s</string>
    <string name="lbl_hips">hips: %1$s</string>

    <string name="pattern_geometric">Geometric</string>
    <string name="pattern_dotted">dotted</string>
    <string name="pattern_other">Other</string>
    <string name="pattern_animalistic">Animalistic</string>
    <string name="pattern_camo">Camo</string>
    <string name="pattern_checker">Checker</string>
    <string name="pattern_leopard">Leopard</string>
    <string name="pattern_plain">Plain</string>
    <string name="pattern_stripped">Stripped</string>
    <string name="pattern_art">Art</string>
    <string name="pattern_florist">Florist</string>

    <string name="color_white">White</string>
    <string name="color_black">Black</string>
    <string name="color_gray">Gray</string>
    <string name="color_silver">Silver</string>
    <string name="color_beige">Beige</string>
    <string name="color_red">Red</string>
    <string name="color_coral">Coral</string>
    <string name="color_pink">Pink</string>
    <string name="color_orange">Orange</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_light_blue">Light blue</string>
    <string name="color_blue">Blue</string>
    <string name="color_violet">Violet</string>
    <string name="color_fuchsia">Fuchsia</string>
    <string name="color_dark_red">Dark red</string>
    <string name="color_brown">Brown</string>
    <string name="color_mutlicolor">Multicolor</string>

    <string name="additional_description">Vendor ID: %1$s\nColor: %2$s\nPattern: %3$s</string>
    <string name="lbl_login">Sign in</string>
    <string name="lbl_registration">Sign up</string>
    <string name="lbl_get_verification_code">Get verification code</string>
    <string name="enter_name">Enter name*</string>
    <string name="enter_email">Enter e-mail*</string>
    <string name="lbl_news_checkbox">Get to know about new products and offers</string>
    <string name="txt_account_new_disclamer">Clicking on make account you are agreeing to our terms of service</string>
    <string name="lbl_create_an_account">Create an account</string>
    <string name="lbl_phone_number_or_e_mail">Phone number or e-mail</string>
    <string name="txt_ad_offerings_sing_up">Use personal discounts and get gifts from our partners!</string>
    <string name="lbl_sign_in_socials">Sign in using socials</string>
    <string name="lbl_password">Password</string>
    <string name="filter">Filter</string>
    <string name="sort_by_popularity">By popularity</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="left_items_counter">%1$d товаров</string>
    <string name="enter_profile">Enter profile</string>
</resources>