<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.arsnyan.lamodacopy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.arsnyan.lamodacopy.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.arsnyan.lamodacopy.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.arsnyan.lamodacopy.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.arsnyan.lamodacopy.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_lamodaClubInfo"
            app:destination="@id/navigation_lamodaClubInfo" />
    </fragment>

    <fragment
        android:id="@+id/navigation_lamodaClubInfo"
        android:name="com.arsnyan.lamodacopy.ui.lamodaclub.LamodaClubScreenFragment"
        tools:layout="@layout/fragment_lamoda_club_screen"/>
</navigation>