<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.TextField.LamodaCopy.All"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:theme="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_default_margin_step"
            android:hint="@string/lbl_phone_number_or_e_mail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Button.LamodaCopy.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_default_margin_step"
        android:text="@string/lbl_get_verification_code" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_sign_in_socials"
        android:layout_gravity="center"/>

<!--    <com.google.android.material.divider.MaterialDivider-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="8dp"-->
<!--        android:layout_marginTop="@dimen/dimen_default_margin_step" />-->

<!--    Купить подарочный сертификат-->
<!--    Страна (иконка справа)-->
<!--    Доставка и примерка-->
<!--    Центр поддержки-->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_default_margin_step"
        android:background="@color/gray_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/support_buttons_holder">

        <TextView
            android:id="@+id/txt_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_version" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/link_check_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_check_for_updates" />
    </LinearLayout>
</LinearLayout>