<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favourites.FavouritesFragment">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_favourites"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_items_counter"
                android:layout_gravity="center"/>
            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Button.LamodaCopy.IconButton.TopAlignment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"
                    android:textAlignment="viewStart"
                    android:layout_weight="1"
                    app:icon="@drawable/outline_filter_alt_24"
                    app:iconGravity="start" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Button.LamodaCopy.IconButton.TopAlignment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_by_popularity"
                    android:textAlignment="viewStart"
                    app:icon="@drawable/baseline_sort_by_alpha_24"
                    app:iconGravity="start" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</LinearLayout>